use CMAKE_CURRENT_LIST_DIR

--- a/firmware/xmodem/CMakeLists.txt
+++ b/firmware/xmodem/CMakeLists.txt
@@ -4,4 +4,4 @@ add_library(xmodem STATIC
     xmodem.c
 )
 
-target_include_directories(xmodem PUBLIC .)
+target_include_directories(xmodem PUBLIC ${CMAKE_CURRENT_LIST_DIR})
