--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -57,5 +57,5 @@ jobs:
       - name: Upload
         uses: actions/upload-artifact@v4
         with:
-          name: Build
+          name: ${{ env.PROJECT_NAME }}
           path: ${{ env.PROJECT_DIR }}/build/*.uf2
